# ComfyUI-triXope

./: AudioToTablature.py  ColorFX.py  DirectoryFileSelector.js  DirectoryFileSelector.py  GroupMonitor.js  GroupMonitor.py  PreviewAudioTab.py  README.md  Trixope_VAE_Decoder.py  Trixope_VAE_Decoder_Native.py  Trixope_VAE_Encoder.py  __init__.py  character_craft.py  ensure_directory.py  eta_node.py  eta_tracker.js  filmauteur_groups.js  filmauteur_ltxv.py  image_batch_selector.py  image_batch_upscaler.py  nodes.py  path_combiner_node.py  prompt_split.py  pyproject.toml  story_select.py  text_switch.py  toggle_folder_save.py  triXope_VideoPreview.js  video_latents.py  video_upscale_dimensions.py
