[project]
name = "ComfyUI-triXope"
description = "Template repository for custom nodes from [ComfyUI-CustomNodes-Template](https://github.com/jhj0517/ComfyUI-CustomNodes-Template)."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["",]  # e.g.) ["numpy==1.18.1", ]

[project.urls]
Repository = "https://github.com/triXope/Comfyuio-triXope"

[tool.comfy]
PublisherId = "triXope"
DisplayName = "Comfyui-triXope"
Icon = ""
